# evanm

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GitHub-Secrets-Setup.md  README.md  package-lock.json  package.json  test-notion.mjs
.claude/commands/: prioritize.md
.github/workflows/: energy-ci.yml  energy-collect.yml  job-search.yml  notion_motion_sync.yaml
.github/workflows/archive/: notion_motion_sync.yaml
apps/agent/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  SCHEDULER_DEPLOYMENT_CHECKLIST.md  app.py  pyproject.toml  railway.toml  requirements.txt  test_response.json
apps/agent/models/: __init__.py  enphase_models.py  task_models.py
apps/agent/routes/: agent.py  scheduler.py
apps/agent/scheduler/: README.md  __init__.py  scheduling_algorithm.py  time_slots.py
apps/agent/services/: __init__.py  enphase.py  task_creation.py  task_scheduler.py
apps/agent/tests/: test_scheduling_algorithm.py
apps/agent/tools/: __init__.py  enphase_tools.py  registry.py  task_tools.py
apps/agent/utils/: auth.py  config.py
apps/desktop/: Dockerfile  next.config.ts  package.json  railway.toml
apps/desktop/.next/: prerender-manifest.json  trace
apps/desktop/.next/cache/: .rscinfo
apps/desktop/.next/server/: server-reference-manifest.json  webpack-runtime.js
apps/desktop/.next/server/app/: page.js  page_client-reference-manifest.js
apps/desktop/.next/server/vendor-chunks/: @swc.js  clsx.js  lucide-react.js  object-assign.js  prop-types.js  react-draggable.js  react-is.js
apps/desktop/src/app/: globals.css  layout.tsx
apps/desktop/src/components/: Desktop.tsx  DesktopIcon.tsx  MenuBar.tsx
apps/desktop/src/hooks/: useWindow.ts
apps/energy-mcp/: config.py  db.py  pyproject.toml  server.py
apps/energy-mcp/tools/: anomalies.py  baseline.py  summary.py  usage.py
apps/jobs/: README.md  package.json  pyproject.toml  requirements.txt
apps/jobs/archive/notion/: SETUP.md  notion_sync.py
apps/jobs/archive/scheduler/: DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MIGRATED.md  NEXT_STEPS.md  README.md  SETUP.md  __init__.py  calendar_scheduler.py  scheduling_algorithm.py  test_scheduler.py  time_slots.py
apps/jobs/energy/: __main__.py  aggregator.py  anomaly_detector.py  collector.py  config.py  db.py  enphase_client.py  models.py  oauth_bootstrap.py  requirements.txt  schema.sql
apps/jobs/job_search/: __main__.py  config.py  cover_letter.md  criteria.md  evaluate.py  main.py  models.py  notion_db.py  resume.md  search.py
apps/jobs/motion/: README.md  motion_sync.py
apps/jobs/notion/: README.md  notion_sync.py
apps/jobs/scripts/: tennisviz.py
apps/web/: Dockerfile  next.config.ts  package.json  railway.toml
apps/web/public/: manifest.json  sw.js  tennis_tournament_bracket.html
apps/web/scripts/: generate-content.js
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: Desktop.tsx  DesktopIcon.tsx  MenuBar.tsx  MenuDropdown.tsx  PixelIcons.tsx  WindowFrame.tsx
apps/web/src/content/: about-me.md  about-me.txt  site-inspiration.md
apps/web/src/context/: ContentContext.tsx  ViewContext.tsx  WindowContext.tsx
apps/web/src/data/: content.ts  generated-content.json
apps/web/src/hooks/: fetcher.ts  useAuth.ts  useDemoTasks.ts  useDemoTodos.ts  useIsMobile.ts  useRateLimit.ts  useTasks.ts  useTodos.ts  useWindow.ts
apps/web/src/types/: window.ts
apps/web/src/utils/: environment.ts
apps/zeroclaw/: Caddyfile  Dockerfile  README.md  railway.toml  start.sh
docs/: ARCHITECTURE.md  COMMON_TASKS.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  railway-deployment.md
docs/agent/: Config.md  EnphaseIntegration.md  Models.md  README.md  Scheduler.md  TaskCreationService.md
docs/jobs/: README.md
docs/web/: README.md
scripts/: commit.js  commit.mjs  commit.sh  railway-setup.sh
(+138 files in other folders)
