[project]
name = "evanm-agent"
version = "1.0.0"
description = "AI-powered task creation and management API built with FastAPI"
authors = [
    {name = "Evan Mullins", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "hypercorn>=0.17.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "notion-client>=2.2.1",
    "openai>=1.57.3",
    "pydantic>=2.10.5",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=7.0.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

