[project]
name = "energy-mcp"
version = "0.1.0"
description = "MCP server for querying home energy monitoring data"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
